Fix du bug de la scrollbar

--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -28,6 +28,7 @@
     width: 200px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 
 .icon-button:hover {
